2020/11/02 푼 문제들 추가

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,intellij,java
 .idea/vcs.xml
+.idea/codeStyles/Project.xml
